--- a/cat/index.html
+++ b/cat/index.html
@@ -22,9 +22,9 @@
 			<img id="cat_builder" src="images/cat_builder.jpg" alt="Кот строитель">
 			<address>
 				<p><q>Сделаем мир пушистее</q></p>
-				<p>Никита Киселев</p>
-				<p>8-929-796-19-39</p>
-				<p><a href="mailto:nikihka@icloud.com">nikihka@icloud.com</a></p>
+				<p>Кошкин Кот</p>
+				<p>8-800-200-30-43</p>
+				<p><a href="mailto:cat@cat.ru">cat@cat.ru</a></p>
 			</address>
 		</div>
 			
