--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
       <title>Резюме</title>
   </head>
     <body>
