--- a/obeder/index.html
+++ b/obeder/index.html
@@ -3,8 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>obeder</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="header">
+    <div class="logo">
+      <img src="" alt="">
+      <span>obeder</span>
+    </div>
+    <div class="toggle-group">
+      <p>Не ем</p>
+      <span class="switches">
+        <input type="radio" name="switch" value="off">
+        <input type="radio" name="switch" value="on">
+        <span class="switch"></span>
+      </span>
+      <p>Ем</p>
+    </div>
+  </div>
 </body>
 </html>
