Добавил логотип. Доверстал переключатель

--- a/obeder/index.html
+++ b/obeder/index.html
@@ -8,20 +8,25 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  <div class="header">
-    <div class="logo">
-      <img src="" alt="">
-      <span>obeder</span>
+  <div class="container">
+    <div class="header">
+      <div class="logo">
+        <img id="logo" src="image/logo.png" alt="logo">
+        <span>obeder</span>
+      </div>
+      <div class="toggle-group">
+        <p>Не ем</p>
+        <span class="switches">
+          <input type="radio" name="switch" value="off">
+          <input type="radio" name="switch" value="on">
+          <span class="switch"></span>
+        </span>
+        <p>Ем</p>
+      </div>
     </div>
-    <div class="toggle-group">
-      <p>Не ем</p>
-      <span class="switches">
-        <input type="radio" name="switch" value="off">
-        <input type="radio" name="switch" value="on">
-        <span class="switch"></span>
-      </span>
-      <p>Ем</p>
-    </div>
+  </div>
+  <div class="container">
+
   </div>
 </body>
 </html>
