Edit width header. Began to typeset the menu

--- a/obeder/index.html
+++ b/obeder/index.html
@@ -8,25 +8,32 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <div class="logo">
-        <img id="logo" src="image/logo.png" alt="logo">
-        <span>obeder</span>
-      </div>
-      <div class="toggle-group">
-        <p>Не ем</p>
-        <span class="switches">
-          <input type="radio" name="switch" value="off">
-          <input type="radio" name="switch" value="on">
-          <span class="switch"></span>
-        </span>
-        <p>Ем</p>
-      </div>
+  <div class="header">
+    <div class="logo">
+      <img id="logo" src="image/logo.png" alt="logo">
+      <h1>obeder</h1>
+    </div>
+    <div class="toggle-group">
+      <p>Не ем</p>
+      <span class="switches">
+        <input type="radio" name="switch" value="off">
+        <input type="radio" name="switch" value="on">
+        <span class="switch"></span>
+      </span>
+      <p>Ем</p>
     </div>
   </div>
   <div class="container">
-
+    <div class="content">
+      <section>
+        <h2>Понедельник, сегодня, 6 февраля</h2>
+        <article>
+          <h3>Салаты</h3>
+          
+        </article>
+      </section>
+      <section></section>
+    </div>
   </div>
 </body>
 </html>
