--- a/obeder/index.html
+++ b/obeder/index.html
@@ -23,17 +23,19 @@
       <p>Ем</p>
     </div>
   </div>
-  <div class="container">
-    <div class="content">
-      <section>
-        <h2>Понедельник, сегодня, 6 февраля</h2>
-        <article>
-          <h3>Салаты</h3>
+  <div class="content">
+    <section>
+      <h2>Понедельник, сегодня, 6 февраля</h2>
+      <article>
+        <h3>Салаты</h3>
+        
+      </article>
+      <article>
+        <h3>Мясо</h3>
           
-        </article>
-      </section>
-      <section></section>
-    </div>
+      </article>
+    </section>
+    <section></section>
   </div>
 </body>
 </html>
