--- a/obeder/index.html
+++ b/obeder/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>obeder</title>
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -11,8 +12,8 @@
   <div class="header">
     <div class="logo">
       <a href="index.html">
-      <img id="logo" src="image/logo.png" alt="logo">
-      <h1>obeder</h1>
+        <img id="logo" src="image/logo.png" alt="logo">
+        <h1>obeder</h1>
       </a>
     </div>
     <div class="toggle-group">
@@ -56,7 +57,7 @@
         </article>
         <div>
           <input type="text" name="comment" id="">
-          <button type="reset">Сбросить в дефолт</button>
+          <button type="reset" class="btn btn-reset">Сбросить в дефолт</button>
         </div>
       </form>
     </section>
@@ -90,7 +91,7 @@
         </article>
         <div>
           <input type="text" name="comment" id="">
-          <button type="reset">Сбросить в дефолт</button>
+          <button type="reset" class="btn btn-reset">Сбросить в дефолт</button>
         </div>
       </form>
     </section>
