--- a/obeder/index.html
+++ b/obeder/index.html
@@ -32,66 +32,106 @@
       <form>
         <article>
           <h3>Салаты</h3>
-          <input type="checkbox" name="salad" value="delicate" class="delicate">Нежный<br>
-          <input type="checkbox" name="salad" value="salad_of_beetroot" class="salad_of_beetroot">Винегрет овощной со свежим горошком<br>
+          <label class="checkbox">
+            <input type="checkbox" name="salad" value="delicate-mon" id="delicate-mon"><span>Нежный</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="salad" value="salad-of-beetroot-mon" id="salad-of-beetroot-mon"><span>Винегрет овощной со свежим горошком</span>
+          </label>
         </article>
         <article>
           <h3>Мясо</h3>
-          <input type="checkbox" name="meat" value="kupaty">Купаты купательные<br>
-          <input type="checkbox" name="meat" value="german_sausages">Сосиски немецкие с сыром, приправами, чесноком и базиликом<br>
+          <label class="checkbox">
+            <input type="checkbox" name="meat" value="kupaty-mon" id="kupaty-mon"><span>Купаты купательные</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="meat" value="german-sausages-mon" id="german-sausages-mon"><span>Сосиски немецкие с сыром, приправами, чесноком и базиликом</span>
+          </label>
         </article>
         <article>
           <h3>Супы</h3>
-          <input type="checkbox" name="soup" value="borsch">Борщ с галушками по-украински<br>
-          <input type="checkbox" name="soup" value="shchi">Щи щецкие по щщам дающие на серьёзных щщах<br>
+          <label class="checkbox">
+            <input type="checkbox" name="soup" value="borsch-mon" id="borsch-mon"><span>Борщ с галушками по-украински</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="soup" value="shchi-mon" id="shchi-mon"><span>Щи щецкие по щщам дающие на серьёзных щщах</span>
+          </label>
         </article>
         <article>
           <h3>Гарниры</h3>
-          <input type="checkbox" name="side_dish" value="rice">Рис-хуис<br>
-          <input type="checkbox" name="side_dish" value="pasta">Макарохи<br>
+          <label class="checkbox">
+            <input type="checkbox" name="side-dish" value="rice-mon" id="rice-mon"><span>Рис-хуис</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="side-dish" value="pasta-mon" id="pasta-mon"><span>Макарохи</span>
+          </label>
         </article>
         <article>
           <h3>Вторые блюда</h3>
-          <input type="checkbox" name="main_dishes" value="Ubercarbonara">Уберкарбонара с соусом из усов шанхайского барса<br>
-          <input type="checkbox" name="main_dishes" value="pelmeni">Пельмехи зачотные<br>
+          <label class="checkbox">
+            <input type="checkbox" name="main-dishes" value="ubercarbonara-mon" id="ubercarbonara-mon"><span>Уберкарбонара с соусом из усов шанхайского барса</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="main-dishes" value="pelmeni-mon" id="pelmeni-mon"><span>Пельмехи зачотные</span>
+          </label>
         </article>
         <div>
-          <input type="text" name="comment" id="">
-          <button type="reset" class="btn btn-reset">Сбросить в дефолт</button>
+          <textarea class="comment"></textarea>
+          <button type="reset" class="btn btn-reset">Сбросить в дефолт!</button>
         </div>
       </form>
     </section>
     <section>
       <h2>Вторник, завтра, 7 февраля</h2>
       <form>
-        <article>
+       <article>
           <h3>Салаты</h3>
-          <input type="checkbox" name="salad" value="delicate" class="delicate">Нежный<br>
-          <input type="checkbox" name="salad" value="salad_of_beetroot" class="salad_of_beetroot">Винегрет овощной со свежим горошком<br>
+          <label class="checkbox">
+            <input type="checkbox" name="salad" value="delicate-tue" id="delicate-tue"><span>Нежный</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="salad" value="salad-of-beetroot-tue" id="salad-of-beetroot-tue"><span>Винегрет овощной со свежим горошком</span>
+          </label>
         </article>
         <article>
           <h3>Мясо</h3>
-          <input type="checkbox" name="meat" value="kupaty">Купаты купательные<br>
-          <input type="checkbox" name="meat" value="german_sausages">Сосиски немецкие с сыром, приправами, чесноком и базиликом<br>
+          <label class="checkbox">
+            <input type="checkbox" name="meat" value="kupaty-tue" id="kupaty-tue"><span>Купаты купательные</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="meat" value="german-sausages-tue" id="german-sausages-tue"><span>Сосиски немецкие с сыром, приправами, чесноком и базиликом</span>
+          </label>
         </article>
         <article>
           <h3>Супы</h3>
-          <input type="checkbox" name="soup" value="borsch">Борщ с галушками по-украински<br>
-          <input type="checkbox" name="soup" value="shchi">Щи щецкие по щщам дающие на серьёзных щщах<br>
+          <label class="checkbox">
+            <input type="checkbox" name="soup" value="borsch-tue" id="borsch-tue"><span>Борщ с галушками по-украински</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="soup" value="shchi-tue" id="shchi-tue"><span>Щи щецкие по щщам дающие на серьёзных щщах</span>
+          </label>
         </article>
         <article>
           <h3>Гарниры</h3>
-          <input type="checkbox" name="side_dish" value="rice">Рис-хуис<br>
-          <input type="checkbox" name="side_dish" value="pasta">Макарохи<br>
+          <label class="checkbox">
+            <input type="checkbox" name="side-dish" value="rice-tue" id="rice-tue"><span>Рис-хуис</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="side-dish" value="pasta-tue" id="pasta-tue"><span>Макарохи</span>
+          </label>
         </article>
         <article>
           <h3>Вторые блюда</h3>
-          <input type="checkbox" name="main_dishes" value="Ubercarbonara">Уберкарбонара с соусом из усов шанхайского барса<br>
-          <input type="checkbox" name="main_dishes" value="pelmeni">Пельмехи зачотные<br>
+          <label class="checkbox">
+            <input type="checkbox" name="main-dishes" value="ubercarbonara-tue" id="ubercarbonara-tue"><span>Уберкарбонара с соусом из усов шанхайского барса</span>
+          </label>
+          <label class="checkbox">
+            <input type="checkbox" name="main-dishes" value="pelmeni-tue" id="pelmeni-tue"><span>Пельмехи зачотные</span>
+          </label>
         </article>
         <div>
-          <input type="text" name="comment" id="">
-          <button type="reset" class="btn btn-reset">Сбросить в дефолт</button>
+          <textarea class="comment"></textarea>
+          <button type="reset" class="btn btn-reset">Сбросить в дефолт!</button>
         </div>
       </form>
     </section>
