Добавил класс ко второму form

--- a/obeder/menu.html
+++ b/obeder/menu.html
@@ -94,7 +94,7 @@
     </section>
     <section>
       <h2>Вторник,<span> завтра,</span> 7 февраля</h2>
-      <form>
+      <form class="menu">
        <article>
           <h3>Салаты</h3>
           <label class="checkbox">
