Исправления после проверки валидатором. Добавление атрибута lang. Исправления в label(заменил div на span)

--- a/obeder/index.html
+++ b/obeder/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>obeder</title>
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="log-in">
-      <form action="">
+      <form>
         <input type="email" name="email" id="email" placeholder="Электропочта">
         <input type="password" name="password" id="password" placeholder="Кодовое слово">
         <button type="submit">Обедать!</button>
