--- a/obeder/menu.html
+++ b/obeder/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>obeder</title>
@@ -35,55 +35,55 @@
           <h3>Салаты</h3>
           <label class="checkbox">
             <input type="checkbox" name="salad" value="delicate-mon" id="delicate-mon"><span>Нежный</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="salad" value="salad-of-beetroot-mon" id="salad-of-beetroot-mon"><span>Винегрет овощной со свежим горошком</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Мясо</h3>
           <label class="checkbox">
             <input type="checkbox" name="meat" value="kupaty-mon" id="kupaty-mon"><span>Купаты купательные</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="meat" value="german-sausages-mon" id="german-sausages-mon"><span>Сосиски немецкие с сыром, приправами, чесноком и базиликом</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Супы</h3>
           <label class="checkbox">
             <input type="checkbox" name="soup" value="borsch-mon" id="borsch-mon"><span>Борщ с галушками по-украински</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="soup" value="shchi-mon" id="shchi-mon"><span>Щи щецкие по щщам дающие на серьёзных щщах</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Гарниры</h3>
           <label class="checkbox">
             <input type="checkbox" name="side-dish" value="rice-mon" id="rice-mon"><span>Рис-хуис</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="side-dish" value="pasta-mon" id="pasta-mon"><span>Макарохи</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Вторые блюда</h3>
           <label class="checkbox">
             <input type="checkbox" name="main-dishes" value="ubercarbonara-mon" id="ubercarbonara-mon"><span>Уберкарбонара с соусом из усов шанхайского барса</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="main-dishes" value="pelmeni-mon" id="pelmeni-mon"><span>Пельмехи зачотные</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <div>
@@ -99,55 +99,55 @@
           <h3>Салаты</h3>
           <label class="checkbox">
             <input type="checkbox" name="salad" value="delicate-tue" id="delicate-tue"><span>Нежный</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="salad" value="salad-of-beetroot-tue" id="salad-of-beetroot-tue"><span>Винегрет овощной со свежим горошком</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Мясо</h3>
           <label class="checkbox">
             <input type="checkbox" name="meat" value="kupaty-tue" id="kupaty-tue"><span>Купаты купательные</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="meat" value="german-sausages-tue" id="german-sausages-tue"><span>Сосиски немецкие с сыром, приправами, чесноком и базиликом</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Супы</h3>
           <label class="checkbox">
             <input type="checkbox" name="soup" value="borsch-tue" id="borsch-tue"><span>Борщ с галушками по-украински</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="soup" value="shchi-tue" id="shchi-tue"><span>Щи щецкие по щщам дающие на серьёзных щщах</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Гарниры</h3>
           <label class="checkbox">
             <input type="checkbox" name="side-dish" value="rice-tue" id="rice-tue"><span>Рис-хуис</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="side-dish" value="pasta-tue" id="pasta-tue"><span>Макарохи</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <article>
           <h3>Вторые блюда</h3>
           <label class="checkbox">
             <input type="checkbox" name="main-dishes" value="ubercarbonara-tue" id="ubercarbonara-tue"><span>Уберкарбонара с соусом из усов шанхайского барса</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
           <label class="checkbox">
             <input type="checkbox" name="main-dishes" value="pelmeni-tue" id="pelmeni-tue"><span>Пельмехи зачотные</span>
-            <div class="checkmark"></div>
+            <span class="checkmark"></span>
           </label>
         </article>
         <div>
