index.html ew attribute in form (action). New @media screen in css

--- a/obeder/index.html
+++ b/obeder/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="log-in">
-      <form>
+      <form action="menu.html">
         <input type="email" name="email" id="email" placeholder="Электропочта">
         <input type="password" name="password" id="password" placeholder="Кодовое слово">
         <button type="submit">Обедать!</button>
