--- a/obeder/index.html
+++ b/obeder/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>obeder</title>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width" />
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="content-starting">
     <div class="header">
       <div class="logotype">
         <a href="#">
-          <img id="logo" src="/image/logo.png" alt="logo">
+          <img id="logo" src="image/logo.png" alt="logo">
           <h1>obeder</h1>
         </a>
       </div>
