--- a/obeder/menu.html
+++ b/obeder/menu.html
@@ -32,7 +32,7 @@
     <section>
       <h2>Понедельник,<span> сегодня,</span> 6 февраля</h2>
       <form class="menu">
-        <article>
+        <fieldset>
           <h3>Салаты</h3>
           <label class="checkbox">
             <input type="checkbox" name="salad" value="delicate-mon" id="delicate-mon"><span>Нежный</span>
@@ -42,8 +42,8 @@
             <input type="checkbox" name="salad" value="salad-of-beetroot-mon" id="salad-of-beetroot-mon"><span>Винегрет овощной со свежим горошком</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset>
           <h3>Мясо</h3>
           <label class="checkbox">
             <input type="checkbox" name="meat" value="kupaty-mon" id="kupaty-mon"><span>Купаты купательные</span>
@@ -53,8 +53,8 @@
             <input type="checkbox" name="meat" value="german-sausages-mon" id="german-sausages-mon"><span>Сосиски немецкие с сыром, приправами, чесноком и базиликом</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset>
           <h3>Супы</h3>
           <label class="checkbox">
             <input type="checkbox" name="soup" value="borsch-mon" id="borsch-mon"><span>Борщ с галушками по-украински</span>
@@ -64,8 +64,8 @@
             <input type="checkbox" name="soup" value="shchi-mon" id="shchi-mon"><span>Щи щецкие по щщам дающие на серьёзных щщах</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset>
           <h3>Гарниры</h3>
           <label class="checkbox">
             <input type="checkbox" name="side-dish" value="rice-mon" id="rice-mon"><span>Рис-хуис</span>
@@ -75,8 +75,8 @@
             <input type="checkbox" name="side-dish" value="pasta-mon" id="pasta-mon"><span>Макарохи</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset disabled="disabled">
           <h3>Вторые блюда</h3>
           <label class="checkbox">
             <input type="checkbox" name="main-dishes" value="ubercarbonara-mon" id="ubercarbonara-mon"><span>Уберкарбонара с соусом из усов шанхайского барса</span>
@@ -86,7 +86,7 @@
             <input type="checkbox" name="main-dishes" value="pelmeni-mon" id="pelmeni-mon"><span>Пельмехи зачотные</span>
             <span class="checkmark"></span>
           </label>
-        </article>
+        </fieldset>
         <div>
           <textarea class="comment"></textarea>
           <button type="reset" class="btn btn-reset">Сбросить в дефолт!</button>
@@ -96,7 +96,7 @@
     <section>
       <h2>Вторник,<span> завтра,</span> 7 февраля</h2>
       <form class="menu">
-       <article>
+       <fieldset>
           <h3>Салаты</h3>
           <label class="checkbox">
             <input type="checkbox" name="salad" value="delicate-tue" id="delicate-tue"><span>Нежный</span>
@@ -106,8 +106,8 @@
             <input type="checkbox" name="salad" value="salad-of-beetroot-tue" id="salad-of-beetroot-tue"><span>Винегрет овощной со свежим горошком</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset>
           <h3>Мясо</h3>
           <label class="checkbox">
             <input type="checkbox" name="meat" value="kupaty-tue" id="kupaty-tue"><span>Купаты купательные</span>
@@ -117,8 +117,8 @@
             <input type="checkbox" name="meat" value="german-sausages-tue" id="german-sausages-tue"><span>Сосиски немецкие с сыром, приправами, чесноком и базиликом</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset>
           <h3>Супы</h3>
           <label class="checkbox">
             <input type="checkbox" name="soup" value="borsch-tue" id="borsch-tue"><span>Борщ с галушками по-украински</span>
@@ -128,8 +128,8 @@
             <input type="checkbox" name="soup" value="shchi-tue" id="shchi-tue"><span>Щи щецкие по щщам дающие на серьёзных щщах</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset>
           <h3>Гарниры</h3>
           <label class="checkbox">
             <input type="checkbox" name="side-dish" value="rice-tue" id="rice-tue"><span>Рис-хуис</span>
@@ -139,8 +139,8 @@
             <input type="checkbox" name="side-dish" value="pasta-tue" id="pasta-tue"><span>Макарохи</span>
             <span class="checkmark"></span>
           </label>
-        </article>
-        <article>
+        </fieldset>
+        <fieldset disabled="disabled">
           <h3>Вторые блюда</h3>
           <label class="checkbox">
             <input type="checkbox" name="main-dishes" value="ubercarbonara-tue" id="ubercarbonara-tue"><span>Уберкарбонара с соусом из усов шанхайского барса</span>
@@ -150,7 +150,7 @@
             <input type="checkbox" name="main-dishes" value="pelmeni-tue" id="pelmeni-tue"><span>Пельмехи зачотные</span>
             <span class="checkmark"></span>
           </label>
-        </article>
+        </fieldset>
         <div>
           <textarea class="comment"></textarea>
           <button type="reset" class="btn btn-reset">Сбросить в дефолт!</button>
