Add animation to display none. Corrections in the layout.

--- a/obeder/menu.html
+++ b/obeder/menu.html
@@ -19,9 +19,9 @@
         <h1>obeder</h1>
       </a>
     </div>
-    <div class="toggle-group">
+    <div class="toggle-group" id="toggle-group">
       <p>Не ем</p>
-      <form class="switches" name="swithesForm">
+      <form class="switches" name="switchesForm">
         <input type="radio" name="switch" value="off">
         <input type="radio" name="switch" value="on" checked>
         <span class="switch"></span>
