--- a/obeder/index.html
+++ b/obeder/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="log-in">
       <form action="menu.html">
-        <input type="email" name="email" id="email" placeholder="Электропочта" autocorrect="off" autocapitalize="off" autocomplete="email" required>
-        <input type="password" name="password" id="password" placeholder="Кодовое слово" autocorrect="off" required>
+        <input type="email" name="email" id="email" placeholder="Электропочта" autocapitalize="off" autocomplete="email" required>
+        <input type="password" name="password" id="password" placeholder="Кодовое слово" required>
         <div>
           <button type="submit" class="btn btn-dinner">Обедать!</button>
         </div>
