Renamed class. Renamed logo

--- a/TwitterBox/index.html
+++ b/TwitterBox/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="image/icons/icon-twitter.png" alt="icon" class="icon">
+    <img src="image/icons/logo-twitter.png" alt="logo" class="logo">
     <h1>Twitter Box</h1>
   </header>
   <div class="tweet-box">
