edit class name

--- a/TwitterBox/index.html
+++ b/TwitterBox/index.html
@@ -14,7 +14,7 @@
   </header>
   <div class="tweet-box">
     <form>
-      <div name="tweet-text" contenteditable="true" class="tweet-text" id="tweet-text"></div>
+      <div name="tweet-message" contenteditable="true" class="tweet-message" id="tweet-message"></div>
       <input type="file" accept="image/gif,image/jpeg,image/jpg,image/png" name="media" id="loading-images">
       <label for="loading-images"></label>
       <div id="image-preview"><img src="image/tsveta-ottenki-linii-volosy.jpg" alt="tsveta-ottenki-linii-volosy"></div>
