--- a/TwitterBox/index.html
+++ b/TwitterBox/index.html
@@ -14,12 +14,12 @@
   </header>
   <div class="tweet-box">
     <form>
-      <div name="tweet-message" contenteditable="true" class="tweet-message" id="tweet-message"></div>
+      <textarea name="tweet-message" class="tweet-message" id="tweet-message"></textarea>
       <input type="file" accept="image/gif,image/jpeg,image/jpg,image/png" name="media" id="loading-images">
       <label for="loading-images"></label>
       <div id="image-preview"><img src="image/tsveta-ottenki-linii-volosy.jpg" alt="tsveta-ottenki-linii-volosy"></div>
       <button type="submit" id="button-send" class="btn">Отправить</button>
-      <div id="counter">280 из 280</div>
+      <div id="counter" class="counter">280 из 280</div>
     </form>
   </div>
 </body>
