--- a/TwitterBox/index.html
+++ b/TwitterBox/index.html
@@ -24,10 +24,10 @@
         />
         <label for="loading-images"></label>
         <div id="image-preview" class="image-preview">
-          <img src="image/tsveta-ottenki-linii-volosy.jpg" alt="tsveta-ottenki-linii-volosy" />
+          <ul id="image-list"></ul>
         </div>
-        <button type="submit" class="btn button-send">Отправить</button>
-        <div id="counter" class="counter">280 из 280</div>
+        <button type="submit" id="button-send" class="btn button-send">Отправить</button>
+        <div id="counter" class="counter"></div>
       </form>
     </div>
   </body>
